Revert "HACK-587: fix headers on tablet and adjust on mobile"
This reverts commit 0e785a75067db007b3b09d2f6218c9d34d9dc750.

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -405,7 +405,7 @@ CSS MEDIA QUERIES FOR THEHACKERATI.COM
     /* SECTION 1 */
 
     .welcome-container { 
-        padding-top: 20em; 
+        padding-top: 3em; 
     }
 
     .welcome-container .nav-links { 
@@ -1046,10 +1046,6 @@ CSS MEDIA QUERIES FOR THEHACKERATI.COM
     */
 
     /* SECTION 1 */
-
-    .welcome-container { 
-        padding-top: 3em; 
-    }
 
     .welcome-container .block-left { 
         width: 100%; 
